--- a/03-my-team/scss/style.css
+++ b/03-my-team/scss/style.css
@@ -403,6 +403,67 @@ button {
   }
 }
 
+.offcanvas {
+  background: var(--color-police-blue);
+  background-image: url(../images/shape7.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 280px;
+  height: 100vh;
+  padding: 60px;
+  transition: right 0.3s ease-in-out;
+  z-index: 1000;
+}
+.offcanvas ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-top: 50px;
+}
+.offcanvas ul li {
+  margin-bottom: 30px;
+}
+.offcanvas ul li a {
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 600;
+}
+.offcanvas ul li a:hover {
+  color: var(--color-light-coral);
+}
+.offcanvas.active {
+  right: 0;
+}
+.offcanvas .offcanvas__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  z-index: 900;
+}
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
 .header {
   background-color: var(--color-midnight-green);
   padding: 0 20px;
