team cards event

--- a/03-my-team/scss/abstracts/_variables.scss
+++ b/03-my-team/scss/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+
 :root {
   --color-midnight-green: #014e56;
   --color-light-coral: #f67e7e;
@@ -8,7 +9,7 @@
   --color-sacramento-state-green: #012f34;
   --color-dark-green: #002529;
 
-  --font-family: "Livvic", sans-serif;
+  --font-family: "Livvic";
 
   --transition-duration: 0.2s;
 }
