--- a/03-my-team/scss/abstracts/_fonts.scss
+++ b/03-my-team/scss/abstracts/_fonts.scss
@@ -1,55 +1,55 @@
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-Black.woff2') format('woff2');
+  src: url('../fonts/Livvic-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-Bold.woff2') format('woff2');
+  src: url('../fonts/Livvic-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-SemiBold.woff2') format('woff2');
+  src: url('../fonts/Livvic-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-Medium.woff2') format('woff2');
+  src: url('../fonts/Livvic-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-Regular.woff2') format('woff2');
+  src: url('../fonts/Livvic-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-Light.woff2') format('woff2');
+  src: url('../fonts/Livvic-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-ExtraLight.woff2') format('woff2');
+  src: url('../fonts/Livvic-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Livvic';
-  src: url('../../fonts/Livvic-Thin.woff2') format('woff2');
+  src: url('../fonts/Livvic-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
