--- a/03-my-team/scss/components/_offcanvas.scss
+++ b/03-my-team/scss/components/_offcanvas.scss
@@ -1,6 +1,10 @@
 @use "../abstracts" as *;
 
 .offcanvas {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 40px;
   background: var(--color-police-blue);
   background-image: url(../images/shape7.svg);
   background-repeat: no-repeat;
@@ -10,17 +14,30 @@
   right: -100%; // boshlanishida yashirin
   width: 280px;
   height: 100vh;
-  padding: 80px 60px;
+  padding: 55px 25px 25px 50px;
   transition: right 0.3s ease-in-out;
   z-index: 1000;
 
-  ul {
+  &.active {
+    right: 0; // chiqadi
+  }
+
+  .offcanvas__close {
+    align-self: end;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    padding: 0;
+  }
+
+  &__list {
     list-style: none;
     padding: 0;
     margin: 0;
-    padding-top: 50px;
 
-    li {
+    &-item {
       margin-bottom: 30px;
 
       a {
@@ -29,6 +46,8 @@
         text-decoration: none;
         font-weight: 600;
         text-transform: lowercase;
+        width: 100%;
+        display: block;
 
         &:hover {
           color: var(--color-light-coral);
@@ -41,20 +60,7 @@
     }
   }
 
-  &.active {
-    right: 0; // chiqadi
-  }
-
-  .offcanvas__close {
-    position: absolute;
-    top: 55px;
-    right: 20px;
-    font-size: 24px;
-    color: white;
-    cursor: pointer;
-    background: none;
-    border: none;
-  }
+  
 }
 
 
