--- a/03-my-team/scss/pages/about/_team.scss
+++ b/03-my-team/scss/pages/about/_team.scss
@@ -34,9 +34,6 @@
     text-align: center;
     position: relative;
     transition: all 0.5s ease;
-    &.active {
-      transform: rotateY(180deg);
-    }
 
     &-img {
       width: 96px;
@@ -51,9 +48,6 @@
     &-title {
       color: var(--color-rapture-blue);
       margin-bottom: 10px;
-    }
-    &.active &-title {
-      transform: rotateY(180deg);
     }
 
     &-text {
@@ -76,12 +70,13 @@
       font-size: 15px;
       cursor: pointer;
       transition: 0.3s all ease;
-      position: absolute;
-      bottom: -28px;
-      left: 50%;
-      transform: translateX(-50%);
       width: 56px;
       height: 56px;
+      position: absolute;
+      bottom: -28px;
+      left: 0;
+      right: 0;
+      margin: auto;
       
       &:hover {
         background-color: var(--color-rapture-blue);
@@ -97,11 +92,10 @@
 
     &-info {
       display: none;
+      margin-top: 20px;
     }
     &.active &-info {
       display: block;
-      margin-top: 20px;
-      transform: rotateY(180deg);
     }
 
     &-info-text {
